--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,30 @@
+backpack==0.1
+blinker==1.4
 certifi==2017.11.5
 chardet==3.0.4
+cleo==0.6.8
 decorator==4.0.9
+Faker==0.8.18
 idna==2.6
+inflection==0.3.1
+lazy-object-proxy==1.3.1
+orator==0.9.8
+pastel==0.1.0
+pendulum==1.5.1
 praw==5.2.0
 prawcore==0.12.0
+pyaml==16.12.2
+Pygments==2.3.1
+pylev==1.3.0
+python-dateutil==2.7.5
+pytz==2018.7
+pytzdata==2018.7
+PyYAML==3.13
 requests==2.18.4
+simplejson==3.16.0
 six==1.10.0
+text-unidecode==1.2
+tzlocal==1.5.1
 update-checker==0.16
 urllib3==1.22
+wrapt==1.10.11
